syntax = "proto3";

option java_package = "org.cs511.proto";

message dummy_proto {
    int32 field1 = 1;
    string field2 = 2;
}