syntax = "proto3";

option java_package = "org.cs511.proto";

message single_proto {
    string tconst = 1;
    string rating = 2;
}